--- a/loancalculator/src/main/res/layout-land/activity_calculator.xml
+++ b/loancalculator/src/main/res/layout-land/activity_calculator.xml
@@ -136,6 +136,23 @@
                     android:layout_marginLeft="10dp"
                     android:text="@string/sys_percent" />
             </TableRow>
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="134dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fixed_interest_rate" />
+
+                <ToggleButton
+                    android:layout_marginLeft="5dp"
+                    android:textOff="Compound"
+                    android:textOn="Fixed" />
+
+            </TableRow>
         </TableLayout>
 
         <View
