--- a/loancalculator/src/main/res/layout/activity_loan.xml
+++ b/loancalculator/src/main/res/layout/activity_loan.xml
@@ -19,13 +19,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoanActivity">
+    tools:context=".LoanActivity"
+    tools:layout_editor_absoluteY="25dp">
 
-    <TextView
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello World!"
-        android:textColor="@android:color/black"
-        android:textSize="30sp" />
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/splash"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_splash" />
 
 </android.support.constraint.ConstraintLayout>
